feat: new routes for admin and fixes
