# public/swagger.json
@@ -34,6 +34,73 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"IExercisesGroup": {
+				"properties": {
+					"is_active": {
+						"type": "boolean"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"is_active",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ErrorCode": {
+				"enum": [
+					404,
+					403,
+					400,
+					410,
+					429,
+					500
+				],
+				"type": "number"
+			},
+			"StructuredErrors": {
+				"type": "string",
+				"enum": [
+					"sql/failed",
+					"sql/not-found",
+					"validation/failed",
+					"auth/missing-email",
+					"auth/unknown-email",
+					"auth/missing-magic-link-token",
+					"auth/invalid-magic-link-token",
+					"auth/missing-header",
+					"auth/access-token-expired",
+					"auth/invalid-access-token",
+					"user/register/user-already-exists",
+					"ssh/connexion failed",
+					"mysql/connexion failed",
+					"internal/unknown"
+				]
+			},
+			"ApiError": {
+				"properties": {
+					"httpCode": {
+						"$ref": "#/components/schemas/ErrorCode"
+					},
+					"structuredError": {
+						"$ref": "#/components/schemas/StructuredErrors"
+					},
+					"errMessage": {
+						"type": "string"
+					},
+					"errDetails": {}
+				},
+				"required": [
+					"httpCode",
+					"structuredError",
+					"errMessage"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"IChangeExerciseGroupStateRequest": {
 				"properties": {
 					"state": {
@@ -291,12 +358,50 @@
 				}
 			}
 		},
+		"/admin/exercise_list": {
+			"get": {
+				"operationId": "GetAllExercises",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IExercisesGroup"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"JWTADMIN": []
+					}
+				],
+				"parameters": []
+			}
+		},
 		"/admin/exercise": {
 			"post": {
 				"operationId": "ChangeExerciseGroupState",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{},
+										{
+											"$ref": "#/components/schemas/ApiError"
+										}
+									]
+								}
+							}
+						}
 					}
 				},
 				"security": [
