# src/types/IExercicesGroup.ts
@@ -1,0 +1,4 @@
+export interface IExercisesGroup {
+    is_active: boolean,
+    name: string
+}
